alongtheway-frontend/src/app/home/home.component.css
:root {
  --main-font: 'Roboto', sans-serif;
}

.container {
  display: flex;
}

.collapsibles-container {
    flex-basis: 25%;
    display: flex;
    flex-direction: column;
    min-width: 360px; /* Adjust this value based on your content size */
    max-width: 30%; /* Optional, to prevent it from growing too large in wider viewports */
}

.form-container {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.flex-container {
  display: flex;
  align-items: center;
  margin-bottom: 0;
  white-space: nowrap;
  justify-content: space-between;
}

.flex-container.margin-between {
  margin-bottom: 0px;
}

.flex-container.margin-between2 {
  margin-bottom: 2px;
}

.flex-container .flex-label {
  margin-right: 10px;
  flex-shrink: 0;
  font-size: 14px;
}

.flex-container .flex-input:not(:first-child) {
  margin-left: 7px;
  margin-right: 7px;
  margin-top: 1px;
}

.flex-container .remove-button {
  margin-left: auto;
  padding: 0px 2px;
}

.flex-label {
  margin-right: 10px;
  flex-shrink: 0;
  font-size: 14px;
}

.flex-input {
  font-size: 14px;
  margin-left: 7px;
  margin-right: 7px;
  font-family: var(--main-font-family);
}

.weather-group {
  margin-left: auto;
  margin-right: 1px;
  display: flex;
  align-items: center;
}

.addstop-weather-group {
  margin-right: 1px;
  display: flex;
  align-items: center;
}

.weather-icon {
  height: 22px;
  margin-right: auto;
  display: block;
  margin: auto;
}

.weather-temp {
  font-size: 12px;
}

.add-stop-button {
  font-size: 14px;
  padding: 1px 8px;
  margin-left: auto;
  margin-right: 49px;
  margin-bottom: 2px;
  margin-top: 3px;
  font-family: var(--main-font-family);
}

.queue {
  flex: 1;
  border: 1px solid black;
  background-color: #fff;
  height: 60vh;
  padding: 10px;
  overflow-y: scroll;
}

.map-container {
  flex: 1;
  height: 88vh;
}

.places-container {
  flex: 1;
  height: 60vh;
  overflow-y: auto;
  padding: 10px;
  background-color: #f9f9f9;
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
  margin-top: 8px;
  margin-right: 8px;
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
}

.places-container h3 {
  margin-top: 0;
  font-weight: normal;
  font-size: 14px;
  text-decoration-line: underline;
}

.places-container ul {
  max-height: 100px; /* Adjust the max-height value as needed */
  overflow-y: scroll;
  padding-top: 0px;
}

.button-container {
  display: flex;
  justify-content: center;
  margin-top: 1px;
  margin-bottom: 4px;
}

.collapsible {
  margin-bottom: 1px;
  display: flex;
  flex-direction: column;
  justify-content: flex-start; /* Change from "space-between" to "flex-start" */
}

.collapsible-content {
  opacity: 1; /* Fully visible when expanded */
  max-height: 500px; /* Arbitrary max-height, it should be more than the actual content height */
  overflow: visible; /* Hide content that exceeds max-height */
  transition: opacity 0.3s ease, max-height 0.5s ease; /* Transition for opacity and max-height */
  padding: /* Your padding settings */;
}

.collapsible-content.collapsed {
  opacity: 0; /* Fully transparent when collapsed */
  max-height: 0; /* Max height to 0 */
  padding: 0; /* Add this line to remove padding when collapsed */
}

.collapsible:not(.collapsed) .collapsible-header {
  font-size: 14px; /* The font-size when the collapsible is open. Adjust this value as needed */
  color: black;
}

.collapsible-header {
  font-size: 14px;
  font-weight: 400;
  transition: font-size 0.5s ease; /* This will make the font-size transition smoothly */
  margin-right: 7px;
  margin-bottom: 4px;
  color: black;
  background-image: linear-gradient(white, #c7dfff);
  padding: 8px;
  cursor: pointer;
  text-align: center;
  /*border: 1px solid gray; /* Add border properties */
  border-radius: 5px; /* Add border-radius for rounded corners */
  position: relative; /* Add position relative for pseudo-element */
  height: 12px; /* Adjust this value as needed */
  line-height: 12px; /* Should be the same as height */
  user-select: none;
}

.collapsible-title {
  text-align: center;
  margin-top: 3px;
  margin-bottom: 6px; /* Remove the margin */
  padding: 0; /* Remove the padding */
  font-size: 12px;
  font-weight: 600;
}

.arrow-icon {
  display: inline-block;
  width: 0;
  height: 0;
  border-style: solid;
  border-width: 6px 4px 0 4px; /* Modify border-width to create a down arrow */
  border-color: #000 transparent transparent transparent;
  margin-left: 5px;
  margin-bottom: 2px;
  transform: scaleY(1); /* No flip for the open state */
  transition: transform 0.7s ease; /* Add transition for smooth animation */
}

.collapsible.collapsed .arrow-icon {
  transform: scaleY(-1); /* Flip along the vertical axis for the closed state */
  margin-bottom: 2px;
}

.flex-value-box {
  margin-right: 7px;
  padding: 2px 4px;
  display: inline-block;
  border: 1px solid #ccc;
  border-radius: 4px;
  background-color: #f2f2f2;
}

.remove-button {
  margin-left: 0; /* Remove the left margin */
  font-size: 14px;
  font-family: var(--main-font-family);
}

.input-text {
  font-size: 14px;
}

/* Loading Flag */
.loading {
  display: inline-block;
  width: 20px;
  height: 20px;
  border: 4px solid #f3f3f3;
  border-top: 4px solid #3498db;
  border-radius: 50%;
  animation: spin 1s linear infinite;
}

@keyframes spin {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(360deg);
  }
}

.searchresults .list-items li {
  display: flex;
  align-items: center;
  justify-content: space-between;
  margin-bottom: 2px;
  font-size: 14px;
  border: 1px solid black;
  padding: 2px;
  background-image: linear-gradient(white, #c7dfff);
  border-radius: 3px;
}

.searchresults .list-items {
  height: 56vh;
  overflow-y: auto;
  padding-left: 1px;
  padding-right: 4px;
  margin-top: 0;
}

.list-button {
    margin-left: 10px; /* Space between content and button */
    margin-right: 8px;
}

.bold-text {
    font-weight: bold;
}

.submit-button {
  font-family: var(--main-font-family);
  font-size: 14px;
  padding: 1px 6px;
  margin-top: 12px;
}

